--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "atropos": "^2.0.2",
     "axios": "^1.4.0",
     "framer-motion": "^10.13.0",
     "lottie-react": "^2.4.0",
